-
Bug
-
Resolution: Done
-
P2: Important
-
5.12.0
-
None
-
0c2beb49b858f49489fa4f1ecee6bfdd6ce57e68 (qt/qtwebengine/dev)
If a page has http-equiv=REFRESH set, we will report in the refresh loads in acceptNavigationRequest as as QWebEnginePage::NavigationTypeLinkClicked which seems wrong, and makes it hard for email-clients to block the reloads.
- is duplicated by
-
QTBUG-56805 QWebEnginePage::acceptNavigationRequest always has type==NavigationTypeLinkClicked
-
- Closed
-
For Gerrit Dashboard: QTBUG-74490 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
256100,3 | Do not report client redirects as link-clicked | 5.12 | qt/qtwebengine | Status: MERGED | +2 | 0 |
256790,3 | Add navigation type for redirects | dev | qt/qtwebengine | Status: MERGED | +2 | 0 |