Add navigation type for redirects

Fixes: QTBUG-74490
Change-Id: Ia8de7dbec717021f367133cebb8c118e333388e4
Reviewed-by: Peter Varga <pvarga@inf.u-szeged.hu>