src/core/api/qwebengineurlrequestinfo.h
@@ -88,7 +88,8 @@ public:
         NavigationTypeFormSubmitted,
         NavigationTypeBackForward,
         NavigationTypeReload,
-        NavigationTypeOther
+        NavigationTypeOther,
+        NavigationTypeRedirect,
     };
 
     ResourceType resourceType() const;
