src/core/net/network_delegate_qt.cpp
@@ -64,13 +64,13 @@ namespace QtWebEngineCore {
 
 WebContentsAdapterClient::NavigationType pageTransitionToNavigationType(ui::PageTransition transition)
 {
+    if (ui::PageTransitionIsRedirect(transition))
+        return WebContentsAdapterClient::RedirectNavigation;
+
     int32_t qualifier = ui::PageTransitionGetQualifier(transition);
 
     if (qualifier & ui::PAGE_TRANSITION_FORWARD_BACK)
         return WebContentsAdapterClient::BackForwardNavigation;
-    // FIXME: Make redirects a separate type:
-    if (qualifier & ui::PAGE_TRANSITION_CLIENT_REDIRECT)
-        return WebContentsAdapterClient::OtherNavigation;
 
     ui::PageTransition strippedTransition = ui::PageTransitionStripQualifier(transition);
 
